tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-bitfield-declaration.wyst
module typed_bits.predecessor

Legacy :: bitfield(u32) {
  FLAG: bits(0, 0)
}
